cmake_minimum_required(VERSION 3.0)
project(GeneratePointCloud)
find_package(OpenCV REQUIRED)
find_package(Eigen3 REQUIRED)
add_executable(Associate GeneratePointCloud.cpp associate.cpp)
add_executable(Generate GeneratePointCloud.cpp generate.cpp)
target_link_libraries(Associate ${OpenCV_LIBS})
target_link_libraries(Associate Eigen3::Eigen)
target_link_libraries(Generate ${OpenCV_LIBS})
target_link_libraries(Generate Eigen3::Eigen)